Add website template

--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#500000" />
+    <link rel="icon" href="./assets/logo/tamu-favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <title>tamuGPT</title>
+</head>
+<body>
+
+<div class="container">
+    <h1 style="text-align: center;">tamuGPT</h1>
+
+    <div class="team-section">
+
+        <div class="team-member-container">
+            <div class="team-member">
+                <a href="https://www.linkedin.com/in/aarthi-vasudevan/" target="_blank">
+                    <img src="https://fastly.picsum.photos/id/433/200/200.jpg?hmac=dBn6DDBngOA94Grm3jfIJNDtv08GorUvB0zMeAw0Jfs" alt="Aarthi">
+                </a>
+            </div>
+            <a href="https://www.linkedin.com/in/aarthi-vasudevan/" target="_blank">
+                <div class="team-member-name">Aarthi</div>
+            </a>
+        </div>
+
+        <div class="team-member-container">
+            <div class="team-member">
+                <a href="https://bharathravichandran.com/" target="_blank">
+                    <img src="./assets/images/bharath.jpeg" alt="Bharath">
+                </a>
+            </div>
+            <a href="https://bharathravichandran.com/" target="_blank">
+                <div class="team-member-name">Bharath</div>
+            </a>
+        </div>
+
+        <div class="team-member-container">
+            <div class="team-member">
+                <a href="https://www.linkedin.com/in/chidambaram-ganesan/" target="_blank">
+                    <img src="https://fastly.picsum.photos/id/433/200/200.jpg?hmac=dBn6DDBngOA94Grm3jfIJNDtv08GorUvB0zMeAw0Jfs" alt="Chidambaram">
+                </a>
+            </div>
+            <a href="https://www.linkedin.com/in/chidambaram-ganesan/" target="_blank">
+                <div class="team-member-name">Chidambaram</div>
+            </a>
+        </div>
+
+        <div class="team-member-container">
+            <div class="team-member">
+                <a href="https://www.linkedin.com/in/vandna-vk/" target="_blank">
+                    <img src="https://fastly.picsum.photos/id/433/200/200.jpg?hmac=dBn6DDBngOA94Grm3jfIJNDtv08GorUvB0zMeAw0Jfs" alt="Vandna">
+                </a>
+            </div>
+            <a href="https://www.linkedin.com/in/vandna-vk/" target="_blank">
+                <div class="team-member-name">Vandna</div>
+            </a>
+        </div>
+
+    </div>
+
+    <h2>Overview</h2>
+    <p>tamuGPT is a sophisticated chatbot from Texas A&M, implemented with Retrieval Augmented Generation (RAG) architecture.</p>
+
+    <h2>GitHub Repository</h2>
+    <p><a href="https://github.com/tamuGPT/tamuGPT/" target="_blank">GitHub Link</a></p>
+
+    <h2>Video Presentation</h2>
+    <p><a href="https://youtu.be/1yWEv_qu_Ek" target="_blank">Watch Video</a></p>
+
+    <h2>Additional Information</h2>
+    <p>[Include any additional information about your project beyond what is covered in the video. This could include key features, technologies used, challenges faced, and any future plans or improvements.]</p>
+
+    <h2>Slides</h2>
+    <p>[If you have prepared slides, you can insert them here.]</p>
+
+</div>
+
+</body>
+</html>
