Add YT video and execution demo

--- a/index.html
+++ b/index.html
@@ -66,20 +66,51 @@
 
     </div>
 
-    <h2>Overview</h2>
-    <p>tamuGPT is a sophisticated chatbot from Texas A&M, implemented with Retrieval Augmented Generation (RAG) architecture.</p>
+    <div class="report-item">
+        <h2>Overview</h2>
+        <p>tamuGPT is a sophisticated chatbot from Texas A&M, implemented with Retrieval Augmented Generation (RAG) architecture.</p>
+    </div>
 
-    <h2>GitHub Repository</h2>
-    <p><a href="https://github.com/tamuGPT/tamuGPT/" target="_blank">GitHub Link</a></p>
+    <div class="report-item">
+        <h2>Additional Information</h2>
+        <p>[Include any additional information about your project beyond what is covered in the video. This could include key features, technologies used, challenges faced, and any future plans or improvements.]</p>
+    </div>
 
-    <h2>Video Presentation</h2>
-    <p><a href="https://youtu.be/1yWEv_qu_Ek" target="_blank">Watch Video</a></p>
+    <div class="report-item">
+        <h2>GitHub Repository</h2>
+        <p><a href="https://github.com/tamuGPT/tamuGPT/" target="_blank">GitHub Link</a></p>
+    </div>
 
-    <h2>Additional Information</h2>
-    <p>[Include any additional information about your project beyond what is covered in the video. This could include key features, technologies used, challenges faced, and any future plans or improvements.]</p>
+    <div class="report-item">
+        <h2>Video Presentation</h2>
+        <div class="video-container">
+            <iframe
+                    src="https://www.youtube.com/embed/1yWEv_qu_Ek?si=pmLpyXE4qtMODCbr"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen>
+            </iframe>
+            <p><a href="https://youtu.be/1yWEv_qu_Ek" target="_blank">Watch Video on YouTube</a></p>
+        </div>
+    </div>
 
-    <h2>Slides</h2>
-    <p>[If you have prepared slides, you can insert them here.]</p>
+    <div class="report-item">
+        <h2>Execution Demo</h2>
+        <div class="video-container">
+            <video controls>
+                <source src="./assets/execution-demo.mov" type="video/mp4">
+                Your browser does not support HTML video.
+            </video>
+            <p><a href="./assets/execution-demo.mov" target="_blank">Download Video</a></p>
+        </div>
+    </div>
+
+    <div class="report-item">
+        <h2>Slides</h2>
+        <p><a href="./assets/slide-deck.pdf" target="_blank">Open Slide Deck</a></p>
+    </div>
 
 </div>
 
