--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <p>tamuGPT is a sophisticated chatbot from Texas A&M, implemented with Retrieval Augmented Generation (RAG) architecture. A workflow of the model is provided below.</p>
         
         <div class="overview">
-            <img src="./assets/images/architecture.png" alt="Architecture Design">
-            <p style="text-align: center;"><a href="./assets/images/architecture.png" target="_blank">Architecture Design</a></p>
+            <img src="./assets/images/architecture.PNG" alt="Architecture Design">
+            <p style="text-align: center;"><a href="./assets/images/architecture.PNG" target="_blank">Architecture Design</a></p>
             <h3>Taking the user input:</h3>
             <ol>
                 <li><strong>User Query:</strong> The process begins with capturing the user's query.</li>
