--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p>tamuGPT is a sophisticated chatbot from Texas A&M, implemented with Retrieval Augmented Generation (RAG) architecture. A workflow of the model is provided below.</p>
         
         <div class="overview">
-            <img src="./assets/images/architecture.png" alt="Architecture Design">
+            <img src="./assets/images/architecture.png"  style="width: 100%" alt="Architecture Design">
             <p style="text-align: center;"><a href="./assets/images/architecture.png" target="_blank">Architecture Design</a></p>
             <h3>Taking the user input:</h3>
             <ol>
