--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="team-member-container">
             <div class="team-member">
                 <a href="https://www.linkedin.com/in/chidambaram-ganesan/" target="_blank">
-                    <img src="https://fastly.picsum.photos/id/433/200/200.jpg?hmac=dBn6DDBngOA94Grm3jfIJNDtv08GorUvB0zMeAw0Jfs" alt="Chidambaram">
+                    <img src="./assets/images/vandna.jpeg" alt="Chidambaram">
                 </a>
             </div>
             <a href="https://www.linkedin.com/in/chidambaram-ganesan/" target="_blank">
