--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <h3><strong>⭐️ Key Features:</strong></h3>  
             <ul> 
                 <li> <strong>Up-to-Date Information:</strong> tamuGPT prioritizes fresh and relevant sources through Google Search, ensuring to get the latest insights</li>
-                <li> <strong>Reliability:</strong> Integrating multiple knowledge sources and leveraging Google Search, tamuGPT provides trustworthy and dependable information</li>
+                <li> <strong>Reliability:</strong> Integrating multiple knowledge sources and leveraging Google Search, tamuGPT provides reliable information</li>
                 <li> <strong>Comprehensive Understanding:</strong> tamuGPT utilizes Retriever-Augmented Generation (RAG) to access the full context of retrieved documents, leading to more insightful responses</li>
             </ul>     
         </div>
