--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="technologies">   
             <h3><strong>🤖 Technologies:</strong></h3>  
             <ul> 
-                <li> <strong>Retriever-Augmented Generation (RAG):</strong> Relevant context is provided to GPT 3.5 model allowing it to access the retrieved documents for better insights</li>
+                <li> <strong>Retrieval Augmented Generation (RAG):</strong> Relevant context is provided to GPT 3.5 model allowing it to access the retrieved documents for better insights</li>
                 <li> <strong>Google Search Integration:</strong> LLM is integrated with Google Search API to retrieve the top potentially relevant documents</li>
                 <li> <strong>Summarization and Reranking:</strong> Summarization and Re-ranking is performed to organize the data chunks and obtain the context for the response generation</li>
             </ul>     
